2015-07-28  Gary Benson  <gbenson@redhat.com>

	* solib.c (auto_target_prefix): New static variable.
	(solib_find_1): Use TARGET_FILENAME_PREFIX as sysroot
	in some cases.
	(show_auto_target_prefix): New function.
	(_initialize_solib): New "set/show auto-target-prefix"
	commands.
	* NEWS: Mention that GDB will use "target:" as the system
	root in some cases.  Mention new "set/show auto-target-prefix"
	commands.

2015-07-28  Gary Benson  <gbenson@redhat.com>

	* gdb_bfd.h (TARGET_SYSROOT_PREFIX): Rename from this...
	(TARGET_FILENAME_PREFIX): ...to this.  Update all uses.

2015-07-28  Gary Benson  <gbenson@redhat.com>

	* remote.c (remote_filesystem_is_local): Update vgdb handling.

2015-07-28  Gary Benson  <gbenson@redhat.com>

	* main.c (captured_main): Revert default sysroot back to "".
	* NEWS: Remove comment about default sysroot being "target:".

2015-07-25  Kevin Buettner  <kevinb@redhat.com>

	* remote.c (read_ptid): Return null_ptid when no thread id
	is found.
	(remote_current_thread): Add log warning for malformed
	qC reply.
	(remote_start_remote): Add log warning when current thread
	not found.

2015-07-24  Pedro Alves  <palves@redhat.com>

	* s390-linux-nat.c (fetch_regs, store_regs, fetch_fpregs)
	(s390_stopped_by_watchpoint, s390_prepare_to_resume): Pass 0 as
	forth argument to ptrace PTRACE_PEEKUSR_AREA/PTRACE_POKEUSR_AREA.

2015-07-24  Pedro Alves  <palves@redhat.com>

	PR gdb/18717
	* linux-nat.c (linux_nat_filter_event): Don't assert that the lwp
	is resumed, and extend the debug log.

2015-07-24  Pedro Alves  <palves@redhat.com>

	* fork-child.c (fork_inferior): Print argv[0] instead of exec_file.

2015-07-24  Pedro Alves  <palves@redhat.com>

	* aarch64-linux-nat.c: Include nat/gdb_ptrace.h instead of
	sys/ptrace.h.
	* alpha-linux-nat.c: Likewise.
	* amd64-linux-nat.c: Likewise.
	* arm-linux-nat.c: Likewise.
	* hppa-linux-nat.c: Likewise.
	* i386-linux-nat.c: Likewise.
	* ia64-linux-nat.c: Likewise.
	* linux-fork.c: Likewise.